--- a/src/component/AdminDashboard/admin-dashboard.css
+++ b/src/component/AdminDashboard/admin-dashboard.css
@@ -187,8 +187,8 @@ ul {
     box-shadow: 0px 4px 15px rgb(0 0 0 / 25%) !important;
     border-radius: 20px;
     color: white !important;
-    margin: 8px 15px;
-    height: 32px;
+    margin: 0 15px;
+    height: 46px;
     min-height: 32px;
     min-width: 30px !important;
     text-decoration: none !important;
