--- a/src/component/AdminDashboard/admin-dashboard.css
+++ b/src/component/AdminDashboard/admin-dashboard.css
@@ -80,14 +80,14 @@ body {
     z-index: 9;
     background: #ffffff;
     height: 100%;
-    overflow: hidden;
     text-align: center;
     padding: 16px;
     padding-top: 24px;
-    width: 80px;
+    width: 100px;
     cursor: pointer;
     overflow-y: scroll;
     overflow-x: hidden;
+    padding-left: 25px;
 }
 
 .profile__img__layout {
@@ -116,6 +116,9 @@ body {
     position: relative;
 }
 
+li:hover>.hiddenHover, li:hover>.hiddenHoverIn{
+    display: block;
+}
 .sidebar__ul li img {
     width: 24px;
     height: 24px;
@@ -230,7 +233,7 @@ ul {
     width: calc(100% - 80px);
     /* height: calc(100vh - 66px); */
     /* margin-top: 65px; */
-    margin-left: auto;
+    margin-left: 100px;
     padding: 32px;
     padding-bottom: 20px;
     /* overflow: hidden; */
