--- a/src/App.css
+++ b/src/App.css
@@ -396,3 +396,8 @@ form label {
 .fs-18{
   font-size: 18px;
 }
+.MIcons{
+  fill: #808080 !important;
+  font-size: 24px !important;
+  margin-right: 10px;
+}
