--- a/src/component/userDashboard/user.css
+++ b/src/component/userDashboard/user.css
@@ -366,19 +366,20 @@ body {
 
 .inprogress-circle {
   position: relative;
-    height: 65px;
     left: -17px;
     top: 4px;
     background: #FFFFFF;
     /* box-shadow: 0px 5px 15px rgb(0 0 0 / 25%); */
     border-radius: 50%;
-    width: 65px;
+    width: 55px;
 }
-
+.addedcircle{
+  margin: 7px 0 0 20px;
+}
 .inprogress-icon {
   position: relative;
-  left: -61px;
-  top: 1px;
+  left: -55px;
+  top: 2px;
 }
 
 .month {
@@ -480,7 +481,7 @@ body {
 }
 
 .info-card {
-  width: 453px;
+  width: 480px;
   height: 330px;
   background: #FFFFFF;
   box-shadow: 0px 4px 15px rgb(0 0 0 / 25%);
