--- a/src/component/AdminDashboard/admin-dashboard.css
+++ b/src/component/AdminDashboard/admin-dashboard.css
@@ -66,7 +66,6 @@ body {
 
 /* sidebar */
 
-
 .side__bar::-webkit-scrollbar-thumb {
     max-height: 50%;
     height: 50%;
@@ -296,10 +295,9 @@ ul {
 }
 
 .tableWrapper {
-    overflow-y: auto;
-    height: 90%;
-    width: 105%;
-    padding-right: 5%;
+    height: 95%;
+    width: 100%;
+    padding-right: 1%;
 }
 
 .table__style {
@@ -358,7 +356,6 @@ ul {
 
 .support__title {
     font-size: 20px;
-    margin-top: 24px;
     margin-bottom: 24px;
     font-weight: 400;
 }
@@ -372,8 +369,8 @@ ul {
 }
 
 .category__box__ht__max {
-    height: 450px;
-    overflow: hidden;
+    height: 300px;
+    overflow: auto;
 
 }
 
@@ -384,8 +381,8 @@ ul {
 .category__box__ht__max div[role="tabpanel"] {
     overflow-y: auto;
     height: 70%;
-    width: 105%;
-    padding-right: 5%;
+    width: 100%;
+    padding-right: 1%;
 }
 
 
@@ -404,9 +401,8 @@ ul {
 }
 
 .category__box__ht__min {
-    height: 400px;
-    overflow: hidden;
-    /* overflow-y: auto; */
+    height: 200px;
+    overflow: auto!important;
 }
 
 .ticketRequestWrapper [aria-label="nav tabs example"]>a.MuiTab-textColorInherit.Mui-selected {
