--- a/src/App.css
+++ b/src/App.css
@@ -195,7 +195,10 @@ button:hover>.hiddenHover, button:hover>.hiddenHoverIn{
   color: rgb(241 88 96);
 }
 .form-control {
-  padding-left: 0!important;
+  padding-left: 5px!important;
+}
+.changepassModal .form-control{
+  border: 1px solid!important;
 }
 .status-success {
   background: #e6e6f2;
