--- a/src/component/AdminDashboard/admin-dashboard.css
+++ b/src/component/AdminDashboard/admin-dashboard.css
@@ -50,6 +50,7 @@ body {
     display: flex;
     justify-content: flex-end;
     margin-bottom: 0;
+    margin-right: 60px;
 }
 
 .menu__navigation li {
@@ -369,13 +370,13 @@ ul {
 }
 
 .category__box__ht__max {
-    height: 300px;
+    height: 480px;
     overflow: auto;
 
 }
 
 .category__box__ht__max>.parentTabs {
-    height: 100%;
+    height: 90%;
 }
 
 .category__box__ht__max div[role="tabpanel"] {
@@ -401,7 +402,7 @@ ul {
 }
 
 .category__box__ht__min {
-    height: 200px;
+    height: 400px;
     overflow: auto!important;
 }
 
@@ -606,7 +607,7 @@ ul {
 } */
 
 .inner__category__box {
-    height: 100%;
+    height: 90%;
 }
 
 @media (max-width: 575.98px) {
@@ -654,7 +655,7 @@ ul {
 }
 
 .ant-modal-header {
-    background: #5c55bf !important;
+    background: #48abf7!important
 
 }
 
