--- a/src/component/tickets/index.css
+++ b/src/component/tickets/index.css
@@ -4,8 +4,8 @@
 }
 
 .ticket__window {
-  margin-left: 10%;
-  margin-right: 4%;
+  margin-left: 180px;
+  margin-right: 60px;
   padding-bottom: 20px;
 }
 
