--- a/src/component/user/style.css
+++ b/src/component/user/style.css
@@ -1,6 +1,6 @@
 .user__window {
-  margin-left: 10%;
-  margin-right: 4%;
+  margin-left: 180px;
+  margin-right: 60px;
   padding-bottom: 20px;
 }
 
