--- a/src/component/roles/style.css
+++ b/src/component/roles/style.css
@@ -1,10 +1,4 @@
 .roles__window {
-  margin-left: 180px;
-  margin-right: 60px;
-  padding-bottom: 20px;
-}
-
-.roles__table {
-
-  padding: 20px 20px 0 0;
+  margin-left: 100px;
+  padding: 32px;
 }
