--- a/src/component/AdminDashboard/admin-dashboard.css
+++ b/src/component/AdminDashboard/admin-dashboard.css
@@ -32,39 +32,6 @@ body {
     flex: 1;
 }
 
-/* header */
-.header__section {
-    width: calc(100% - 80px);
-    margin-left: auto;
-    /* border: 1px solid red; */
-    /* position: fixed;
-    top: 0;
-    left: 0;
-    overflow: hidden;
-    z-index: 9;
-    width: 100%; */
-}
-
-.menu__navigation {
-    overflow: hidden;
-    display: flex;
-    justify-content: flex-end;
-    margin-bottom: 0;
-    margin-right: 60px;
-}
-
-.menu__navigation li {
-    list-style-type: none;
-    margin-top: 24px;
-    margin-right: 32px;
-}
-
-.menu__navigation li figure {
-    margin: 0 !important;
-}
-
-/* header */
-
 /* sidebar */
 
 .side__bar::-webkit-scrollbar-thumb {
@@ -87,7 +54,6 @@ body {
     cursor: pointer;
     overflow-y: scroll;
     overflow-x: hidden;
-    padding-left: 25px;
 }
 
 .profile__img__layout {
@@ -230,13 +196,8 @@ ul {
 
 /* content__section */
 .content__section {
-    width: calc(100% - 80px);
-    /* height: calc(100vh - 66px); */
-    /* margin-top: 65px; */
-    margin-left: 100px;
-    padding: 32px;
-    padding-bottom: 20px;
-    /* overflow: hidden; */
+  margin-left: 100px;
+  padding: 32px;
 }
 
 .dashboard__icon {
@@ -272,11 +233,13 @@ ul {
     padding: 0.5rem;
     border-radius: 10px;
     min-height: 90px;
-    display: flex;
 }
 
 .tickets__box figure {
+    padding: 20px;
     margin: 0;
+    display: flex;
+    justify-content: center;
 }
 
 .table__box {
@@ -372,6 +335,7 @@ ul {
 .category__box__ht__max {
     height: 480px;
     overflow: auto;
+    margin-bottom: 50px;
 
 }
 
@@ -404,6 +368,7 @@ ul {
 .category__box__ht__min {
     height: 400px;
     overflow: auto!important;
+    margin-bottom: 50px;
 }
 
 .ticketRequestWrapper [aria-label="nav tabs example"]>a.MuiTab-textColorInherit.Mui-selected {
@@ -496,75 +461,6 @@ ul {
 
 /* content__section */
 
-/* Calender Section */
-.react-calendar {
-
-    font-family: 'Rubik';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 15px;
-    line-height: 21px;
-    color: #2D3142;
-    position: relative;
-    top: -34px;
-    width: 100%;
-    overflow: hidden;
-
-}
-
-.admin-dashboard .react-calendar__tile {
-
-    font-family: Rubik;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    background-color: white;
-    border: none;
-    padding: 16px
-}
-.category__box .react-calendar__month-view {
-    min-height: 320px;
-}
-
-
-
-
-.react-calendar__viewContainer {
-    line-height: 23px;
-    font-size: 16px;
-    font-family: Rubik;
-    font-style: normal;
-    font-weight: 400;
-    top: 32px;
-    position: relative;
-    text-align: center;
-
-}
-
-.react-calendar__month-view__weekdays__weekday abbr {
-    text-decoration: none;
-
-}
-
-
-.react-calendar__navigation__label {
-    position: absolute;
-    top: 2px !important;
-    left: auto;
-    right: 15px !important;
-    background: transparent;
-    border: none;
-
-}
-
-.calender {
-    margin-top: 10px
-}
-
-.react-calendar__navigation {
-    position: relative;
-}
-
 .pointer {
     cursor: pointer
 }
@@ -622,11 +518,6 @@ ul {
         margin-bottom: inherit;
     }
 
-    .content__section {
-        padding: 1rem;
-        /* overflow: hidden; */
-    }
-
     .category__box {
         position: relative;
     }
@@ -655,7 +546,7 @@ ul {
 }
 
 .ant-modal-header {
-    background: #48abf7!important
+    background: #5c55bf!important
 
 }
 
