--- a/src/component/layout/adminLayout/style.css
+++ b/src/component/layout/adminLayout/style.css
@@ -11,3 +11,13 @@
 .side__bar .default-profile{
     font-size: 28px;
 }
+/* header */
+.header__section {
+    padding: 32px 32px 0px 100px;
+    display: flex;
+    justify-content: end;
+}
+.header__section img{
+    width: 150px;
+}
+/* header */
