--- a/src/component/user/style.css
+++ b/src/component/user/style.css
@@ -1,15 +1,4 @@
 .user__window {
-  margin-left: 180px;
-  margin-right: 60px;
-  padding-bottom: 20px;
-}
-
-.user__table {
-
-  padding: 20px 20px 0 0;
-}
-
-#filter-user{
-  margin-right: 20px;
-  
+  margin-left: 100px;
+  padding: 32px;
 }
