--- a/src/component/userDashboard/user.css
+++ b/src/component/userDashboard/user.css
@@ -472,19 +472,22 @@ body {
 }
 
 .info-card .button-div {
-  position: absolute;
-  width: 392px;
+  margin-top: 16px;
+  margin-bottom: 16px;
+  width: 100%;
   height: 46px;
-  left: 29px;
-  top: -1px;
   background: #FFFFFF;
   box-shadow: 0px 4px 15px rgb(0 0 0 / 25%);
   border-radius: 20px 20px 0px 0px;
 }
+.info-card .Mui-selected {
+  background: #BF5555 !important;
+  color: white !important;
+}
 
 .info-buttons {
 
-  width: 181px !important;
+  width: 46% !important;
   height: 33px !important;
   /* box-shadow: 0px 4px 15px rgb(0 0 0 / 25%); */
   border-radius: 20px !important;
@@ -501,9 +504,8 @@ body {
 
 .info-button-active {
   background: #BF5555 !important;
-  color: white;
+  color: white !important;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
-  width: 181px !important;
   height: 33px !important;
   /* box-shadow: 0px 4px 15px rgb(0 0 0 / 25%); */
   border-radius: 20px !important;
@@ -518,7 +520,27 @@ body {
   left: 20px!important;
 }
 
-
+.table-div{
+  height: 230px;
+  overflow-y: auto;
+}
+.table-div .table{
+  min-height: 210px;
+}
+.more-link{
+  position: absolute;
+  display: block;
+  font-size: 16px;
+  right: 20px;
+  bottom: 10px;
+}
+.faqs-card .more-link{
+  position: absolute;
+  display: block;
+  font-size: 16px;
+  right: 20px;
+  bottom: -30px;
+}
 .table td {
   font-family: 'Rubik';
   font-style: normal;
@@ -637,7 +659,7 @@ body {
 
 .ant-collapse{
   background-color: transparent;
-  border: none;
+  border: none !important;
 
 }
 
