--- a/src/component/tickets/index.css
+++ b/src/component/tickets/index.css
@@ -192,7 +192,7 @@
     color: inherit;
     font-family: 'Rubik'!important;
     font-style: normal!important;
-    font-size: 13px!important;
+    font-size: 13px;
     line-height: 28px;
     color: #2D3142;
     text-align: center !important;
